@@ -11,7 +11,7 @@ public class GlobalExceptionHandler extends ResponseEntityExceptionHandler {
 
     @ExceptionHandler(Exception.class)
     public ResponseEntity<?> handleException(Exception e) {
-        String err = String.format("{\"exception\": \"%s\",\"class\": \"%s\", \"mensagem\":\"%s\"}",
+        String err = "{\"exception\": \"%s\",\"class\": \"%s\", \"mensagem\":\"%s\"}".formatted(
                 e.getClass().getSimpleName(), e.getClass().toString(), e.getMessage());
         return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(err);
     }
